--- a/admin gudang/rincian_pengeluaran_material.html
+++ b/admin gudang/rincian_pengeluaran_material.html
@@ -144,6 +144,32 @@
 								</span>
 							</a>
 						</li>
+						<!-- Surat jalan-->
+						<li class="m-menu__item" aria-haspopup="true" >
+							<a  href="surat_jalan.html" class="m-menu__link ">
+								<i class="m-menu__link-icon flaticon-transport"></i>
+								<span class="m-menu__link-title">
+									<span class="m-menu__link-wrap">
+										<span class="m-menu__link-text">
+											Surat jalan
+										</span>
+									</span>
+								</span>
+							</a>
+						</li>
+						<!-- Barang Masuk -->
+						<li class="m-menu__item" aria-haspopup="true" >
+							<a  href="barang_masuk.html" class="m-menu__link ">
+								<i class="m-menu__link-icon fa fa-shopping-cart"></i>
+								<span class="m-menu__link-title">
+									<span class="m-menu__link-wrap">
+										<span class="m-menu__link-text">
+											Barang Masuk
+										</span>
+									</span>
+								</span>
+							</a>
+						</li>
 						<!-- Pengeluaran Material -->
 						<li class="m-menu__item m-menu__item--active" aria-haspopup="true" >
 							<a  href="pengeluaran_material.html" class="m-menu__link ">
@@ -157,6 +183,19 @@
 								</span>
 							</a>
 						</li>
+						<!-- Inventory-->
+						<li class="m-menu__item" aria-haspopup="true" >
+							<a  href="inventory.html" class="m-menu__link ">
+								<i class="m-menu__link-icon fa 	fa-cube"></i>
+								<span class="m-menu__link-title">
+									<span class="m-menu__link-wrap">
+										<span class="m-menu__link-text">
+											Inventory
+										</span>
+									</span>
+								</span>
+							</a>
+						</li>
 						<!-- Stock -->
 						<li class="m-menu__item" aria-haspopup="true" >
 							<a  href="stock.html" class="m-menu__link ">
@@ -164,7 +203,7 @@
 								<span class="m-menu__link-title">
 									<span class="m-menu__link-wrap">
 										<span class="m-menu__link-text">
-											Stock
+											Manajemen Stock
 										</span>
 									</span>
 								</span>
@@ -182,20 +221,7 @@
 									</span>
 								</span>
 							</a>
-						</li>
-						<!-- item baru -->
-						<li class="m-menu__item" aria-haspopup="true" >
-							<a  href="item_baru.html" class="m-menu__link ">
-								<i class="m-menu__link-icon fa fa-shopping-cart"></i>
-								<span class="m-menu__link-title">
-									<span class="m-menu__link-wrap">
-										<span class="m-menu__link-text">
-											Item Baru
-										</span>
-									</span>
-								</span>
-							</a>
-						</li>
+						</li>	
 					</ul>
 				</div>
 				<!-- END: Aside Menu -->
@@ -237,31 +263,18 @@
 								</li>
 							</ul>
 						</div>
-						<div>
-							<span class="m-subheader__daterange" id="m_dashboard_daterangepicker">
-								<span class="m-subheader__daterange-label">
-									<span class="m-subheader__daterange-title"></span>
-									<span class="m-subheader__daterange-date m--font-brand"></span>
-								</span>
-								<a
-								href="#"
-								class="btn btn-sm btn-brand m-btn m-btn--icon m-btn--icon-only m-btn--custom m-btn--pill">
-								<i class="la la-angle-down"></i>
-							</a>
-						</span>
 					</div>
 				</div>
-			</div>
-			<!-- END: Subheader -->
-			<div class="m-content">
-				<div class="row">
-					<div class="col-xl-12">
-						<div id="data_print" class="m-portlet m-portlet--tab">
-							<div  class="m-portlet__head header">
-								<h3 class="header-pesanan">
-								</h3><br>
-								<h3 name="no_surat_jalan" class="header-pesanan-no"> 
-									<i class="fa fa-check-circle"> </i> 0037/SSM/SPK-PSG/MKS/III/2019
+				<!-- END: Subheader -->
+				<div class="m-content">
+					<div class="row">
+						<div class="col-xl-12">
+							<div id="data_print" class="m-portlet m-portlet--tab">
+								<div  class="m-portlet__head header">
+									<h3 class="header-pesanan">
+									</h3><br>
+									<h3 name="no_surat_jalan" class="header-pesanan-no"> 
+										<i class="fa fa-check-circle"> </i> 0037/SSM/SPK-PSG/MKS/III/2019
 								</h3><br><br><!-- 
 								<button onclick="window.print();return false;">
 									Print
