--- a/admin toko/buat_nota.html
+++ b/admin toko/buat_nota.html
@@ -372,6 +372,14 @@
 								</div>	
 							</div>
 							<div class="m-portlet__body">
+								<div class="form-group m-form__group row">
+									<label class="col-3 col-form-label">
+										Tanggal Jatuh Tempo
+									</label>
+									<div class="col-9">
+										<input class="form-control m-input" type="date" value="" id="tanggal_pembuatan_spk">
+									</div>
+								</div>
 								<!--end: Search Form -->
 								<!--begin: Datatable -->
 								<!-- <div class="m_datatable" id="local_data"></div> -->
