--- a/admin toko/pelanggan.html
+++ b/admin toko/pelanggan.html
@@ -44,13 +44,6 @@
 	<!-- end:: Style tambahan -->
 	<!--end::Base Styles -->
 	<link rel="shortcut icon" href="../assets/demo/default/media/img/logo/favicon.ico" />
-	<style>
-		.btn.btn-secondary:hover:not(:disabled) {
-			border-color: none;
-			background-color: #f1f1f1;
-			color: #1ddd30;
-		}
-	</style>
 </head>
 <!-- end::Head -->
 <!-- end::Body -->
@@ -350,71 +343,56 @@
 											<td>085145322137</td>
 											<td>Jl. Poros Malino, Komplek Griya Riski Abadi C6</td>
 											<td>
-												<a href="edit_pelanggan.html" class="btn btn-sm btn-secondary btn_edit"  style="color:black; width:60px;">
-													<i class="fa fa-edit"></i>
-												</a>
-												<a class="btn btn-sm btn-secondary btn_hapus"  style="color:black; width:60px;">
-													<i class="fa fa-trash-o"></i>
+												<a href="rincian_pelanggan.html" class="btn btn-sm btn-primary"  style="color:white; width:80px;">
+													Rincian
 												</a>
 											</td>
 										</tr>
 										<tr>
 											<td>2</td>
-											<td>00230/PLG/MKS/III</td>
+											<td >00230/PLG/MKS/III</td>
 											<td>Bpk. Rifal</td>
 											<td>085145322137</td>
 											<td>Jl. Poros Malino, Komplek Griya Riski Abadi C6</td>
 											<td>
-												<a class="btn btn-sm btn-secondary btn_edit"  style="color:black; width:60px;">
-													<i class="fa fa-edit"></i>
-												</a>
-												<a class="btn btn-sm btn-secondary btn_hapus"  style="color:black; width:60px;">
-													<i class="fa fa-trash-o"></i>
+												<a href="rincian_pelanggan.html" class="btn btn-sm btn-primary"  style="color:white; width:80px;">
+													Rincian
 												</a>
 											</td>
 										</tr>
 										<tr>
 											<td>3</td>
-											<td>00230/PLG/MKS/III</td>
+											<td >00230/PLG/MKS/III</td>
 											<td>Bpk. Rifal</td>
 											<td>085145322137</td>
 											<td>Jl. Poros Malino, Komplek Griya Riski Abadi C6</td>
 											<td>
-												<a class="btn btn-sm btn-secondary btn_edit"  style="color:black; width:60px;">
-													<i class="fa fa-edit"></i>
-												</a>
-												<a class="btn btn-sm btn-secondary btn_hapus"  style="color:black; width:60px;">
-													<i class="fa fa-trash-o"></i>
+												<a href="rincian_pelanggan.html" class="btn btn-sm btn-primary"  style="color:white; width:80px;">
+													Rincian
 												</a>
 											</td>
 										</tr>
 										<tr>
 											<td>4</td>
-											<td>00230/PLG/MKS/III</td>
+											<td >00230/PLG/MKS/III</td>
 											<td>Bpk. Rifal</td>
 											<td>085145322137</td>
 											<td>Jl. Poros Malino, Komplek Griya Riski Abadi C6</td>
 											<td>
-												<a class="btn btn-sm btn-secondary btn_edit"  style="color:black; width:60px;">
-													<i class="fa fa-edit"></i>
-												</a>
-												<a class="btn btn-sm btn-secondary btn_hapus"  style="color:black; width:60px;">
-													<i class="fa fa-trash-o"></i>
+												<a href="rincian_pelanggan.html" class="btn btn-sm btn-primary"  style="color:white; width:80px;">
+													Rincian
 												</a>
 											</td>
 										</tr>
 										<tr>
 											<td>5</td>
-											<td>00230/PLG/MKS/III</td>
+											<td >00230/PLG/MKS/III</td>
 											<td>Bpk. Rifal</td>
 											<td>085145322137</td>
 											<td>Jl. Poros Malino, Komplek Griya Riski Abadi C6</td>
 											<td>
-												<a class="btn btn-sm btn-secondary btn_edit"  style="color:black; width:60px;">
-													<i class="fa fa-edit"></i>
-												</a>
-												<a class="btn btn-sm btn-secondary btn_hapus"  style="color:black; width:60px;">
-													<i class="fa fa-trash-o"></i>
+												<a href="rincian_pelanggan.html" class="btn btn-sm btn-primary"  style="color:white; width:80px;">
+													Rincian
 												</a>
 											</td>
 										</tr>
