--- a/admin toko/rincian_nota.html
+++ b/admin toko/rincian_nota.html
@@ -449,6 +449,8 @@
 										<th style="width: 15%" class="tg-s268">139,298,500</th>
 									</tr>
 								</table>
+								<p>Pembayaran dapat dikirmkan ke nomer rekening :</p>
+								<p style="font-size: 1.3rem" id="no_rekening_ssm">BNI 12345678</p>
 								<!--end: Datatable -->
 								<div style="margin-top: 20px" class="row">
 									<div align="center" class="col-sm">
