--- a/admin gudang/index.html
+++ b/admin gudang/index.html
@@ -183,6 +183,19 @@
 								</span>
 							</a>
 						</li>
+						<!-- Inventory-->
+						<li class="m-menu__item" aria-haspopup="true" >
+							<a  href="inventory.html" class="m-menu__link ">
+								<i class="m-menu__link-icon fa 	fa-cube"></i>
+								<span class="m-menu__link-title">
+									<span class="m-menu__link-wrap">
+										<span class="m-menu__link-text">
+											Inventory
+										</span>
+									</span>
+								</span>
+							</a>
+						</li>
 						<!-- Stock -->
 						<li class="m-menu__item" aria-haspopup="true" >
 							<a  href="stock.html" class="m-menu__link ">
@@ -190,7 +203,7 @@
 								<span class="m-menu__link-title">
 									<span class="m-menu__link-wrap">
 										<span class="m-menu__link-text">
-											Stock
+											Manajemen Stock
 										</span>
 									</span>
 								</span>
@@ -209,6 +222,7 @@
 								</span>
 							</a>
 						</li>
+						
 					</ul>
 				</div>
 				<!-- END: Aside Menu -->
@@ -230,225 +244,212 @@
 								</li>
 							</ul>
 						</div>
-						<div>
-							<span class="m-subheader__daterange" id="m_dashboard_daterangepicker">
-								<span class="m-subheader__daterange-label">
-									<span class="m-subheader__daterange-title"></span>
-									<span class="m-subheader__daterange-date m--font-brand"></span>
-								</span>
-								<a
-								href="#"
-								class="btn btn-sm btn-brand m-btn m-btn--icon m-btn--icon-only m-btn--custom m-btn--pill">
-								<i class="la la-angle-down"></i>
-							</a>
-						</span>
 					</div>
 				</div>
-			</div>
-			<!-- END: Subheader -->
-			<div class="m-content">
-				<div class="row">
-					<div class="col-xl-6">
-						<div class="m-portlet m--bg-accent-kuning m-portlet--bordered-semi m-portlet--skin-dark m-portlet--full-height ">
-							<div class="m-portlet__head">
-								<div class="m-portlet__head-caption">
-									<div class="m-portlet__head-title">
-										<h3 style="font-size: 2rem" class="m-portlet__head-text">
-											Total Surat Jalan
-										</h3>
+				<!-- END: Subheader -->
+				<div class="m-content">
+					<div class="row">
+						<div class="col-xl-6">
+							<div class="m-portlet m--bg-accent-kuning m-portlet--bordered-semi m-portlet--skin-dark m-portlet--full-height ">
+								<div class="m-portlet__head">
+									<div class="m-portlet__head-caption">
+										<div class="m-portlet__head-title">
+											<h3 style="font-size: 2rem" class="m-portlet__head-text">
+												Total Surat Jalan
+											</h3>
+										</div>
+									</div>
+								</div>
+								<div class="m-portlet__body">
+									<div align="left" style="display:inline-block" class="col-8">
+										<span>
+											<i style="font-size: 4.4rem; color: rgba(0,0,0,.2);" class="fa fa-file-text-o"></i>
+										</span>
+									</div>
+									<!--begin::Widget 7-->
+									<div style="display:inline-block" align="right"  class=" m-widget7 m-widget7--skin-dark">
+										<span  id="total_surat_jalan" class="item-font">92</span> Item
 									</div>
 								</div>
 							</div>
-							<div class="m-portlet__body">
-								<div align="left" style="display:inline-block" class="col-8">
-									<span>
-										<i style="font-size: 4.4rem; color: rgba(0,0,0,.2);" class="fa fa-file-text-o"></i>
-									</span>
-								</div>
-								<!--begin::Widget 7-->
-								<div style="display:inline-block" align="right"  class=" m-widget7 m-widget7--skin-dark">
-									<span  id="total_surat_jalan" class="item-font">92</span> Item
-								</div>
-							</div>
 						</div>
-					</div>
-					<div class="col-xl-6">
-						<div class="m-portlet m--bg-accent-biru m-portlet--bordered-semi m-portlet--skin-dark m-portlet--full-height ">
-							<div class="m-portlet__head">
-								<div class="m-portlet__head-caption">
-									<div class="m-portlet__head-title">
-										<h3 style="font-size: 1.4rem" class="m-portlet__head-text">
-											Total Bukti Pengeluaran Material
-										</h3>
+						<div class="col-xl-6">
+							<div class="m-portlet m--bg-accent-biru m-portlet--bordered-semi m-portlet--skin-dark m-portlet--full-height ">
+								<div class="m-portlet__head">
+									<div class="m-portlet__head-caption">
+										<div class="m-portlet__head-title">
+											<h3 style="font-size: 1.4rem" class="m-portlet__head-text">
+												Total Bukti Pengeluaran Material
+											</h3>
+										</div>
+									</div>
+								</div>
+								<div class="m-portlet__body">
+									<div align="left" style="display:inline-block" class="col-8">
+										<span>
+											<i style="font-size: 4.4rem; color: rgba(0,0,0,.2);" class="fa fa-file-text-o"></i>
+										</span>
+									</div>
+									<div style="display:inline-block" align="right"  class=" m-widget7 m-widget7--skin-dark">
+										<span  id="total_bukti_pengeluaran_material" class="item-font">70</span> Item
 									</div>
 								</div>
 							</div>
-							<div class="m-portlet__body">
-								<div align="left" style="display:inline-block" class="col-8">
-									<span>
-										<i style="font-size: 4.4rem; color: rgba(0,0,0,.2);" class="fa fa-file-text-o"></i>
-									</span>
-								</div>
-								<div style="display:inline-block" align="right"  class=" m-widget7 m-widget7--skin-dark">
-									<span  id="total_bukti_pengeluaran_material" class="item-font">70</span> Item
-								</div>
-							</div>
 						</div>
-					</div>
-					<div class="col-xl-12">
-						<div class="m-portlet m-portlet--mobile">
-							<div class="m-portlet__body">
-								<!--begin: Search Form -->
-								<div class="m-form m-form--label-align-right m--margin-top-20 m--margin-bottom-30">
-									<div class="row align-items-center">
-										<div class="col-md-12">
-											<div class="form-group m-form__group row align-items-center">
-												<div class="col-md-4">
-													<div class="m-portlet__head-title">
-														<h3 class="m-portlet__head-text">
-															List Item Masuk
-														</h3>
+						<div class="col-xl-12">
+							<div class="m-portlet m-portlet--mobile">
+								<div class="m-portlet__body">
+									<!--begin: Search Form -->
+									<div class="m-form m-form--label-align-right m--margin-top-20 m--margin-bottom-30">
+										<div class="row align-items-center">
+											<div class="col-md-12">
+												<div class="form-group m-form__group row align-items-center">
+													<div class="col-md-4">
+														<div class="m-portlet__head-title">
+															<h3 class="m-portlet__head-text">
+																List Item Masuk
+															</h3>
+														</div>
 													</div>
-												</div>
-												<div class="col-md-4 offset-md-4">
-													<div class="m-input-icon m-input-icon--left">
-														<input type="text" class="form-control m-input m-input--solid" placeholder="Search..." id="generalSearch">
-														<span class="m-input-icon__icon m-input-icon__icon--left">
-															<span>
-																<i class="la la-search"></i>
+													<div class="col-md-4 offset-md-4">
+														<div class="m-input-icon m-input-icon--left">
+															<input type="text" class="form-control m-input m-input--solid" placeholder="Search..." id="generalSearch">
+															<span class="m-input-icon__icon m-input-icon__icon--left">
+																<span>
+																	<i class="la la-search"></i>
+																</span>
 															</span>
-														</span>
+														</div>
 													</div>
 												</div>
 											</div>
 										</div>
 									</div>
+									<!--end: Search Form -->
+									<!--begin: Datatable -->
+									<!-- <div class="m_datatable" id="local_data"></div> -->
+									<table  class="table" id="tbl_list_item_masuk">
+										<thead >
+											<tr>
+												<th>No</th>
+												<th>Tanggal</th>
+												<th>Kode</th>
+												<th>No Seri</th>
+												<th>Nama Barang</th>
+												<th>Tipe</th>
+												<th>Merek</th>
+												<th>Jumlah</th>
+												<th>Satuan</th>
+												<th>Keterangan</th>
+											</tr>
+										</thead>
+										<tbody>
+											<tr>
+												<td>1</td>
+												<td>20/19/2018</td>
+												<td>#14253617</td>
+												<td>1105791</td>
+												<td>Thermistor RKD25GVM</td>
+												<td>Thermistor</td>
+												<td>Daikin</td>
+												<td>20</td>
+												<td>unit</td>
+												<td>-</td>
+											</tr>
+											<tr>
+												<td>2</td>
+												<td>20/19/2018</td>
+												<td>#14253617</td>
+												<td>1105791</td>
+												<td>Thermistor RKD25GVM</td>
+												<td>Thermistor</td>
+												<td>Daikin</td>
+												<td>20</td>
+												<td>unit</td>
+												<td>-</td>
+											</tr>
+											<tr>
+												<td>3</td>
+												<td>20/19/2018</td>
+												<td>#14253617</td>
+												<td>1105791</td>
+												<td>Thermistor RKD25GVM</td>
+												<td>Thermistor</td>
+												<td>Daikin</td>
+												<td>20</td>
+												<td>unit</td>
+												<td>-</td>
+											</tr>
+											<tr>
+												<td>4</td>
+												<td>20/19/2018</td>
+												<td>#14253617</td>
+												<td>1105791</td>
+												<td>Thermistor RKD25GVM</td>
+												<td>Thermistor</td>
+												<td>Daikin</td>
+												<td>20</td>
+												<td>unit</td>
+												<td>-</td>
+											</tr>
+											<tr>
+												<td>5</td>
+												<td>20/19/2018</td>
+												<td>#14253617</td>
+												<td>1105791</td>
+												<td>Thermistor RKD25GVM</td>
+												<td>Thermistor</td>
+												<td>Daikin</td>
+												<td>20</td>
+												<td>unit</td>
+												<td>-</td>
+											</tr>
+										</tbody>
+									</table>
+									<!--end: Datatable -->
 								</div>
-								<!--end: Search Form -->
-								<!--begin: Datatable -->
-								<!-- <div class="m_datatable" id="local_data"></div> -->
-								<table class="table" id="tbl_list_item_masuk">
-									<thead>
-										<tr>
-											<th>No</th>
-											<th>Tanggal</th>
-											<th>Kode</th>
-											<th>No Seri</th>
-											<th>Nama Barang</th>
-											<th>Tipe</th>
-											<th>Merek</th>
-											<th>Jumlah</th>
-											<th>Satuan</th>
-											<th>Keterangan</th>
-										</tr>
-									</thead>
-									<tbody>
-										<tr>
-											<td>1</td>
-											<td>20/19/2018</td>
-											<td>#14253617</td>
-											<td>1105791</td>
-											<td>Thermistor RKD25GVM</td>
-											<td>Thermistor</td>
-											<td>Daikin</td>
-											<td>20</td>
-											<td>unit</td>
-											<td>-</td>
-										</tr>
-										<tr>
-											<td>2</td>
-											<td>20/19/2018</td>
-											<td>#14253617</td>
-											<td>1105791</td>
-											<td>Thermistor RKD25GVM</td>
-											<td>Thermistor</td>
-											<td>Daikin</td>
-											<td>20</td>
-											<td>unit</td>
-											<td>-</td>
-										</tr>
-										<tr>
-											<td>3</td>
-											<td>20/19/2018</td>
-											<td>#14253617</td>
-											<td>1105791</td>
-											<td>Thermistor RKD25GVM</td>
-											<td>Thermistor</td>
-											<td>Daikin</td>
-											<td>20</td>
-											<td>unit</td>
-											<td>-</td>
-										</tr>
-										<tr>
-											<td>4</td>
-											<td>20/19/2018</td>
-											<td>#14253617</td>
-											<td>1105791</td>
-											<td>Thermistor RKD25GVM</td>
-											<td>Thermistor</td>
-											<td>Daikin</td>
-											<td>20</td>
-											<td>unit</td>
-											<td>-</td>
-										</tr>
-										<tr>
-											<td>5</td>
-											<td>20/19/2018</td>
-											<td>#14253617</td>
-											<td>1105791</td>
-											<td>Thermistor RKD25GVM</td>
-											<td>Thermistor</td>
-											<td>Daikin</td>
-											<td>20</td>
-											<td>unit</td>
-											<td>-</td>
-										</tr>
-									</tbody>
-								</table>
-								<!--end: Datatable -->
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-	</div>
-	<!-- end:: Body -->
-	<!-- begin::Footer -->
-	<footer class="m-grid__item		m-footer ">
-		<div class="m-container m-container--fluid m-container--full-height m-page__container">
-			<div class="m-stack m-stack--flex-tablet-and-mobile m-stack--ver m-stack--desktop">
-				<div class="m-stack__item m-stack__item--left m-stack__item--middle m-stack__item--last">
-					<span class="m-footer__copyright">
-						Upa'na Studio
-					</span>
+		<!-- end:: Body -->
+		<!-- begin::Footer -->
+		<footer class="m-grid__item		m-footer ">
+			<div class="m-container m-container--fluid m-container--full-height m-page__container">
+				<div class="m-stack m-stack--flex-tablet-and-mobile m-stack--ver m-stack--desktop">
+					<div class="m-stack__item m-stack__item--left m-stack__item--middle m-stack__item--last">
+						<span class="m-footer__copyright">
+							Upa'na Studio
+						</span>
+					</div>
+
 				</div>
-
 			</div>
-		</div>
-	</footer>
-	<!-- end::Footer -->
-</div>
-<!-- end:: Page -->		    
-<!-- begin::Scroll Top -->
-<div class="m-scroll-top m-scroll-top--skin-top" data-toggle="m-scroll-top" data-scroll-offset="500"data-scroll-speed="300">
-	<i class="la la-arrow-up"></i>
-</div>
-<!-- end::Scroll Top -->		    
+		</footer>
+		<!-- end::Footer -->
+	</div>
+	<!-- end:: Page -->		    
+	<!-- begin::Scroll Top -->
+	<div class="m-scroll-top m-scroll-top--skin-top" data-toggle="m-scroll-top" data-scroll-offset="500"data-scroll-speed="300">
+		<i class="la la-arrow-up"></i>
+	</div>
+	<!-- end::Scroll Top -->		    
 
-<!--begin::Base Scripts -->
-<script src="../assets/vendors/base/vendors.bundle.js" type="text/javascript"></script>
-<script src="../assets/demo/default/base/scripts.bundle.js" type="text/javascript"></script>
-<!--end::Base Scripts -->   
-<!--begin::Page Vendors -->
-<script src="../assets/vendors/custom/fullcalendar/fullcalendar.bundle.js" type="text/javascript"></script>
-<!--end::Page Vendors -->  
-<!--begin::Page Snippets -->
-<script src="../assets/app/js/dashboard.js" type="text/javascript"></script>
-<script type="text/javascript">
-	var tbl_list_item_masuk = $('#tbl_list_item_masuk').mDatatable({
-		data: {
-			saveState: {cookie: false},
+	<!--begin::Base Scripts -->
+	<script src="../assets/vendors/base/vendors.bundle.js" type="text/javascript"></script>
+	<script src="../assets/demo/default/base/scripts.bundle.js" type="text/javascript"></script>
+	<!--end::Base Scripts -->   
+	<!--begin::Page Vendors -->
+	<script src="../assets/vendors/custom/fullcalendar/fullcalendar.bundle.js" type="text/javascript"></script>
+	<!--end::Page Vendors -->  
+	<!--begin::Page Snippets -->
+	<script src="../assets/app/js/dashboard.js" type="text/javascript"></script>
+	<script type="text/javascript">
+		var tbl_list_item_masuk = $('#tbl_list_item_masuk').mDatatable({
+			data: {
+				saveState: {cookie: false},
 					/*type: 'remote',
 			        source: {
 			          read: {
@@ -476,7 +477,8 @@
 					class: '', // custom wrapper class
 					scroll: true, // enable/disable datatable scroll both horizontal and vertical when needed.
 					// height: 450, // datatable's body's fixed height
-					footer: false // display/hide footer
+					footer: false, // display/hide footer
+					"autoWidth": false,
 				},
 
 				// column sorting
@@ -489,21 +491,24 @@
 				{
 					field: 'No',
 					textAlign: 'center',
-					width: 50
+					width: 30
 				},
 				{
 					field: 'Tanggal',
 					textAlign: 'center',
 					type:'date',
 					format: 'DD/MM/YYYY',
+					width: 70
 				},
 				{
 					field: 'Kode',
 					textAlign: 'center',
+					width: 70
 				},
 				{
 					field: 'No Seri',
 					textAlign: 'center',
+					width: 70
 				},
 				{
 					field: 'Nama Barang',
@@ -512,18 +517,22 @@
 				{
 					field: 'Tipe',
 					textAlign: 'center',
+					width: 90
 				},
 				{
 					field: 'Merek',
 					textAlign: 'center',
+					width: 80
 				},
 				{
 					field: 'Jumlah',
 					textAlign: 'center',
+					width: 60
 				},
 				{
 					field: 'Satuan',
 					textAlign: 'center',
+					width: 60
 				},
 				{
 					field: 'Keterangan',
