--- a/admin gudang/inventory.html
+++ b/admin gudang/inventory.html
@@ -16,7 +16,7 @@
 <head>
 	<meta charset="utf-8" />
 	<title>
-		Admin Gudang | Batal - Pengeluaran Material
+		Admin Gudang | Inventory
 	</title>
 	<meta name="description" content="Latest updates and statistic charts">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -44,6 +44,13 @@
 	<!-- end:: Style tambahan -->
 	<!--end::Base Styles -->
 	<link rel="shortcut icon" href="../assets/demo/default/media/img/logo/favicon.ico" />
+	<style>
+		.btn.btn-secondary:hover:not(:disabled) {
+			border-color: none;
+			background-color: #f1f1f1;
+			color: #1ddd30;
+		}
+	</style>
 </head>
 <!-- end::Head -->
 <!-- end::Body -->
@@ -171,7 +178,7 @@
 							</a>
 						</li>
 						<!-- Pengeluaran Material -->
-						<li class="m-menu__item m-menu__item--active" aria-haspopup="true" >
+						<li class="m-menu__item" aria-haspopup="true" >
 							<a  href="pengeluaran_material.html" class="m-menu__link ">
 								<i class="m-menu__link-icon la 	la-stack-overflow"></i>
 								<span class="m-menu__link-title">
@@ -184,7 +191,7 @@
 							</a>
 						</li>
 						<!-- Inventory-->
-						<li class="m-menu__item" aria-haspopup="true" >
+						<li class="m-menu__item m-menu__item--active" aria-haspopup="true" >
 							<a  href="inventory.html" class="m-menu__link ">
 								<i class="m-menu__link-icon fa 	fa-cube"></i>
 								<span class="m-menu__link-title">
@@ -233,7 +240,7 @@
 					<div class="d-flex align-items-center">
 						<div class="mr-auto">
 							<h3 class="m-subheader__title m-subheader__title--separator">
-								Pengeluaran Material Batal
+								Inventory
 							</h3>
 							<ul class="m-subheader__breadcrumbs m-nav m-nav--inline">
 								<li class="m-nav__item m-nav__item--home">
@@ -245,19 +252,9 @@
 									-
 								</li>
 								<li class="m-nav__item">
-									<a href="pengeluaran_material.html" class="m-nav__link">
+									<a href="inventory.html" class="m-nav__link">
 										<span class="m-nav__link-text">
-											Pengeluaran Material
-										</span>
-									</a>
-								</li>
-								<li class="m-nav__separator">
-									-
-								</li>
-								<li class="m-nav__item">
-									<a href="batal_pengeluaran_material.html" class="m-nav__link">
-										<span class="m-nav__link-text">
-											Batal
+											Inventory
 										</span>
 									</a>
 								</li>
@@ -269,25 +266,137 @@
 				<div class="m-content">
 					<div class="row">
 						<div class="col-xl-12">
-							<div class="m-portlet m-portlet--tab">
-								<div class="m-portlet__head header">
-									<h3 class="header-pesanan">
-									</h3><br>
-									<h3 name="no_surat_jalan" class="header-pesanan-no"> 
-										<i class="fa fa-check-circle"> </i> 0037/SSM/SPK-PSG/MKS/III/2019
-									</h3><br><br>
-									<div class="info row">
-										<div class="col-sm">
-											<p id="tanggal_surat"><i class="flaticon-calendar-2"> </i>20/11/19</p> 
-											<p id="nama_pelanggan"><i class="flaticon-users"> </i> Ahmad Rifaldi</p>
-											<p id="no_telpon"><i class="fa fa-phone"> </i> 085-145-322-137</p>
+							<div class="m-portlet m-portlet--mobile">
+								<div class="m-portlet__body">
+									<!--begin: Search Form -->
+									<div class="m-form m-form--label-align-right m--margin-top-20 m--margin-bottom-30">
+										<div class="row align-items-center">
+											<div class="col-md-12">
+												<div class="form-group m-form__group row align-items-center">
+													<div class="col-md-4">
+														<div class="m-portlet__head-title">
+															<h3 class="m-portlet__head-text">
+																List Inventory
+															</h3>
+															<button onclick="window.location.href = 'tambah_inventory.html';" type="button" class="btn btn-success btn_tambah_spk">Tambah Item Inventory</button>
+														</div>
+													</div>
+													<div class="col-md-4 offset-md-4">
+														<div class="m-input-icon m-input-icon--left">
+															<input type="text" class="form-control m-input m-input--solid" placeholder="Search..." id="generalSearch">
+															<span class="m-input-icon__icon m-input-icon__icon--left">
+																<span>
+																	<i class="la la-search"></i>
+																</span>
+															</span>
+														</div>
+													</div>
+												</div>
+											</div>
 										</div>
-										<div class="col-sm">
-											<p id="email_pelanggan"><i class="fa fa-envelope-o "> </i> aldi4rifaldi@gmail.com</p> 
-											<p id="alamat_pelanggan"><i class="flaticon-placeholder-1"> </i> Jl. Poros Malino, Griya Riski Abadi blok C6</p>
-											<p id="keterangan_pesanan"><i class="fa fa-suitcase"> </i> Pemasangan 2 unit Ac Split Daikin 2 PK Malaysia</p>		
-										</div>
-									</div>	
+									</div>
+									<!--end: Search Form -->
+									<!--begin: Datatable -->
+									<!-- <div class="m_datatable" id="local_data"></div> -->
+									<table class="table" id="tbl_list_item_inventory">
+										<thead>
+											<tr>
+												<th>No</th>
+												<th>ID Barang</th>
+												<th>Nama Barang</th>
+												<th>No Seri</th>
+												<th>Aksi</th>
+											</tr>
+										</thead>
+										<tbody>
+											<tr>
+												<td>1</td>
+												<td>#14253617</td>
+												<td>Item A</td>
+												<td>1309D4211</td>
+												<td>
+													<a href="print_barcode_inventory.html" class="btn btn-sm btn-secondary btn_print_barcode"  style="color:black; width:40px;">
+														<i class="fa fa-barcode"></i>
+													</a>
+													<a href="edit_inventory.html" class="btn btn-sm btn-secondary btn_edit"  style="color:black; width:40px;">
+														<i class="fa fa-edit"></i>
+													</a>
+													<a class="btn btn-sm btn-secondary btn_hapus"  style="color:black; width:40px;">
+														<i class="fa fa-trash-o"></i>
+													</a>
+												</td>
+											</tr>
+											<tr>
+												<td>2</td>
+												<td>#14253617</td>
+												<td>Item A</td>
+												<td>1309D4211</td>
+												<td>
+													<a href="print_barcode_inventory.html" class="btn btn-sm btn-secondary btn_print_barcode"  style="color:black; width:40px;">
+														<i class="fa fa-barcode"></i>
+													</a>
+													<a href="edit_pelanggan.html" class="btn btn-sm btn-secondary btn_edit"  style="color:black; width:40px;">
+														<i class="fa fa-edit"></i>
+													</a>
+													<a class="btn btn-sm btn-secondary btn_hapus"  style="color:black; width:40px;">
+														<i class="fa fa-trash-o"></i>
+													</a>
+												</td>
+											</tr>
+											<tr>
+												<td>3</td>
+												<td>#14253617</td>
+												<td>Item A</td>
+												<td>1309D4211</td>
+												<td>
+													<a href="print_barcode_inventory.html" class="btn btn-sm btn-secondary btn_print_barcode"  style="color:black; width:40px;">
+														<i class="fa fa-barcode"></i>
+													</a>
+													<a href="edit_pelanggan.html" class="btn btn-sm btn-secondary btn_edit"  style="color:black; width:40px;">
+														<i class="fa fa-edit"></i>
+													</a>
+													<a class="btn btn-sm btn-secondary btn_hapus"  style="color:black; width:40px;">
+														<i class="fa fa-trash-o"></i>
+													</a>
+												</td>
+											</tr>
+											<tr>
+												<td>4</td>
+												<td>#14253617</td>
+												<td>Item A</td>
+												<td>1309D4211</td>
+												<td>
+													<a href="print_barcode_inventory.html" class="btn btn-sm btn-secondary btn_print_barcode"  style="color:black; width:40px;">
+														<i class="fa fa-barcode"></i>
+													</a>
+													<a href="edit_pelanggan.html" class="btn btn-sm btn-secondary btn_edit"  style="color:black; width:40px;">
+														<i class="fa fa-edit"></i>
+													</a>
+													<a class="btn btn-sm btn-secondary btn_hapus"  style="color:black; width:40px;">
+														<i class="fa fa-trash-o"></i>
+													</a>
+												</td>
+											</tr>
+											<tr>
+												<td>5</td>
+												<td>#14253617</td>
+												<td>Item A</td>
+												<td>1309D4211</td>
+												<td>
+													<a href="print_barcode_inventory.html" class="btn btn-sm btn-secondary btn_print_barcode"  style="color:black; width:40px;">
+														<i class="fa fa-barcode"></i>
+													</a>
+													<a href="edit_pelanggan.html" class="btn btn-sm btn-secondary btn_edit"  style="color:black; width:40px;">
+														<i class="fa fa-edit"></i>
+													</a>
+													<a class="btn btn-sm btn-secondary btn_hapus"  style="color:black; width:40px;">
+														<i class="fa fa-trash-o"></i>
+													</a>
+												</td>
+											</tr>
+										</tbody>
+									</table>
+									<!--end: Datatable -->
 								</div>
 							</div>
 						</div>
@@ -305,6 +414,7 @@
 							Upa'na Studio
 						</span>
 					</div>
+
 				</div>
 			</div>
 		</footer>
@@ -327,7 +437,7 @@
 	<!--begin::Page Snippets -->
 	<script src="../assets/app/js/dashboard.js" type="text/javascript"></script>
 	<script type="text/javascript">
-		var tbl_material = $('#tbl_material').mDatatable({
+		var tbl_list_item_inventory = $('#tbl_list_item_inventory').mDatatable({
 			data: {
 				saveState: {cookie: false},
 					/*type: 'remote',
@@ -370,38 +480,23 @@
 				{
 					field: 'No',
 					textAlign: 'center',
+					width: 50
 				},
 				{
-					field: 'Nama Material',
-					textAlign: 'center',
-					width:300
-				},
-				{
-					field: 'Teknisi',
-					textAlign: 'center',
-					width: 75
-				},
-				{
-					field: 'Kostumer',
-					textAlign: 'center',
-					width: 75
-				},
-				{
-					field: 'Pengeluaran',
+					field: 'ID Barang',
 					textAlign: 'center',
 				},
 				{
-					field: 'Retur',
+					field: 'Nama Barang',
 					textAlign: 'center',
 				},
 				{
-					field: 'Total',
+					field: 'No Seri',
 					textAlign: 'center',
 				},
 				{
 					field: 'Aksi',
 					textAlign: 'center',
-					width: 200
 				}
 
 				],
@@ -410,7 +505,7 @@
 		<script>
 			$('.btn_hapus').click(function(e) {
 				swal({
-					title: 'Apakah anda yakin menghapus material ini?',
+					title: 'Apakah anda yakin menghapus item ini?',
 					type: 'warning',
 					showCancelButton: true,
 					confirmButtonText: 'Ya,Hapus!'
@@ -418,41 +513,15 @@
 					if (result.value) {
 						swal(
 							'Berhasil!',
-							'Material telah dihapus',
+							'Item berhasil dihapus dari inventory',
 							'success'
 							)
 					}
 				});
 			});
 		</script>
-		<script>
-			//== Class definition
-			var SweetAlert2Demo = function() {
-
-			//== Demos
-			var initDemos = function() {
-
-				$('#btn_simpan').click(function(e) {
-					swal("Data Telah Tersimpan!", "data yang anda inputkan telah tersimpan", "success");
-				});
-			};
-
-			return {
-					//== Init
-					init: function() {
-						initDemos();
-					},
-				};
-			}();
-
-			//== Class Initialization
-			jQuery(document).ready(function() {
-				SweetAlert2Demo.init();
-			});
-		</script>
-
 		<!--end::Page Snippets -->
 		<script src="http://localhost:35729/livereload.js"></script>
-		
 	</body>
-<!-- end::Body -->
+	<!-- end::Body -->
+	</html>
