--- a/admin gudang/proses_barang_masuk.html
+++ b/admin gudang/proses_barang_masuk.html
@@ -132,7 +132,7 @@
 					<!-- ASIDE MENU DISINI -->
 					<ul class="m-menu__nav  m-menu__nav--dropdown-submenu-arrow ">
 						<!-- DASHBOARD -->
-						<li class="m-menu__item  " aria-haspopup="true" >
+						<li class="m-menu__item " aria-haspopup="true" >
 							<a  href="index.html" class="m-menu__link ">
 								<i class="m-menu__link-icon flaticon-line-graph"></i>
 								<span class="m-menu__link-title">
@@ -158,7 +158,7 @@
 							</a>
 						</li>
 						<!-- Barang Masuk -->
-						<li class="m-menu__item m-menu__item--active" aria-haspopup="true" >
+						<li class="m-menu__item  m-menu__item--active" aria-haspopup="true" >
 							<a  href="barang_masuk.html" class="m-menu__link ">
 								<i class="m-menu__link-icon fa fa-shopping-cart"></i>
 								<span class="m-menu__link-title">
@@ -183,6 +183,19 @@
 								</span>
 							</a>
 						</li>
+						<!-- Inventory-->
+						<li class="m-menu__item" aria-haspopup="true" >
+							<a  href="inventory.html" class="m-menu__link ">
+								<i class="m-menu__link-icon fa 	fa-cube"></i>
+								<span class="m-menu__link-title">
+									<span class="m-menu__link-wrap">
+										<span class="m-menu__link-text">
+											Inventory
+										</span>
+									</span>
+								</span>
+							</a>
+						</li>
 						<!-- Stock -->
 						<li class="m-menu__item" aria-haspopup="true" >
 							<a  href="stock.html" class="m-menu__link ">
@@ -190,7 +203,7 @@
 								<span class="m-menu__link-title">
 									<span class="m-menu__link-wrap">
 										<span class="m-menu__link-text">
-											Stock
+											Manajemen Stock
 										</span>
 									</span>
 								</span>
@@ -208,7 +221,7 @@
 									</span>
 								</span>
 							</a>
-						</li>
+						</li>	
 					</ul>
 				</div>
 				<!-- END: Aside Menu -->
@@ -244,128 +257,116 @@
 								<li class="m-nav__item">
 									<a href="proses_barang_masuk.html" class="m-nav__link">
 										<span class="m-nav__link-text">
-											proses
+											Proses
 										</span>
 									</a>
 								</li>
 							</ul>
 						</div>
-						<div>
-							<span class="m-subheader__daterange" id="m_dashboard_daterangepicker">
-								<span class="m-subheader__daterange-label">
-									<span class="m-subheader__daterange-title"></span>
-									<span class="m-subheader__daterange-date m--font-brand"></span>
-								</span>
-								<a
-								href="#"
-								class="btn btn-sm btn-brand m-btn m-btn--icon m-btn--icon-only m-btn--custom m-btn--pill">
-								<i class="la la-angle-down"></i>
-							</a>
-						</span>
 					</div>
 				</div>
-			</div>
-			<!-- END: Subheader -->
-			<div class="m-content">
-				<div class="row">
-					<div class="col-xl-12">
-						<div class="m-portlet">
-							<div class="m-portlet__head">
-								<div class="m-portlet__head-caption">
-									<div class="m-portlet__head-title">
-										<h3 class="m-portlet__head-text">
-											List Item
-										</h3>
+				<!-- END: Subheader -->
+				<div class="m-content">
+					<div class="row">
+						<div class="col-xl-12">
+							<div class="m-portlet">
+								<div class="m-portlet__head">
+									<div class="m-portlet__head-caption">
+										<div class="m-portlet__head-title">
+											<h3 class="m-portlet__head-text">
+												List Item
+											</h3>
+										</div>
 									</div>
 								</div>
-							</div>
-							<div class="m-portlet__body">
-								<div style="display: inline;" class="col-md-12">
-									<div class="m-input-icon m-input-icon--left">
-										<input type="text" class="form-control m-input m-input--solid" placeholder="Search..." id="generalSearch">
-										<span class="m-input-icon__icon m-input-icon__icon--left">
-											<span>
-												<i class="la la-search"></i>
+								<div class="m-portlet__body">
+									<div style="display: inline;" class="col-md-12">
+										<div class="m-input-icon m-input-icon--left">
+											<input type="text" class="form-control m-input m-input--solid" placeholder="Search..." id="generalSearch">
+											<span class="m-input-icon__icon m-input-icon__icon--left">
+												<span>
+													<i class="la la-search"></i>
+												</span>
 											</span>
-										</span>
+										</div>
 									</div>
-								</div>
-								<div class="tab-content">
-									<table class="table" id="tbl_proses_barang_masuk">
-										<thead>
-											<tr>
-												<th>No</th>
-												<th>Kode</th>
-												<th>Nama Barang</th>
-												<th>Gudang</th>
-												<th>Serial Number</th>
-											</tr>
-										</thead>
-										<tbody>
-											<tr>
-												<td>1</td>
-												<td>#14253617</td>
-												<td>Thermistor RKD25GVM</td>
-												<td>
-													<input type="radio" value="toko" name="lokasi_gudang[0]"> Toko
-													<input type="radio" value="gudang" name="lokasi_gudang[0]"> Kantor
-												</td>
-												<td>
-													<input required="" type="text" name="input_serial_number[]" class="form-control m-input" placeholder="">
-												</td>
-											</tr>
-											<tr>
-												<td>2</td>
-												<td>#14253617</td>
-												<td>Thermistor RKD25GVM</td>
-												<td>
-													<input type="radio" value="toko" name="lokasi_gudang[1]"> Toko
-													<input type="radio" value="gudang" name="lokasi_gudang[1]"> Kantor
-												</td>
-												<td>
-													<input required="" type="text" name="input_serial_number[]" class="form-control m-input" placeholder="">
-												</td>
-											</tr>
-											<tr>
-												<td>3</td>
-												<td>#14253617</td>
-												<td>Thermistor RKD25GVM</td>
-												<td>
-													<input type="radio" value="toko" name="lokasi_gudang[2]"> Toko
-													<input type="radio" value="gudang" name="lokasi_gudang[2]"> Kantor
-												</td>
-												<td>
-													<input required="" type="text" name="input_serial_number[]" class="form-control m-input" placeholder="">
-												</td>
-											</tr>
-											<tr>
-												<td>4</td>
-												<td>#14253617</td>
-												<td>Thermistor RKD25GVM</td>
-												<td>
-													<input disabled="" type="radio" value="toko" name="lokasi_gudang[3]"> Toko
-													<input disabled="" checked="" type="radio" value="gudang" name="lokasi_gudang[3]"> Kantor
-												</td>
-												<td>
-													<input disabled="" required="" type="text" name="input_serial_number[]" class="form-control m-input" value="23942-34-98923">
-												</td>
-											</tr>
-											<tr>
-												<td>5</td>
-												<td>#14253617</td>
-												<td>Thermistor RKD25GVM</td>
-												<td>
-													<input disabled="" type="radio" value="toko" name="lokasi_gudang[4]"> Toko
-													<input disabled="" checked="" type="radio" value="gudang" name="lokasi_gudang[4]"> Kantor
-												</td>
-												<td>
-													<input disabled="" required="" type="text" name="input_serial_number[]" class="form-control m-input" value="23942-34-98923">
-												</td>
-											</tr>
-										</tbody>
-									</table>
-									<div align="center">
-										<button type="submit" id="btn_simpan" class="btn btn-success">Simpan</button>	
+									<div class="tab-content">
+										<table class="table" id="tbl_proses_barang_masuk">
+											<thead>
+												<tr>
+													<th>No</th>
+													<th>Kode</th>
+													<th>Nama Barang</th>
+													<th>Gudang</th>
+													<th>Serial Number</th>
+												</tr>
+											</thead>
+											<tbody>
+												<tr>
+													<td>1</td>
+													<td>#14253617</td>
+													<td>Thermistor RKD25GVM</td>
+													<td>
+														<input type="radio" value="toko" name="lokasi_gudang[0]"> Toko
+														<input type="radio" value="gudang" name="lokasi_gudang[0]"> Kantor
+													</td>
+													<td>
+														<input required="" type="text" name="input_serial_number[]" class="form-control m-input" placeholder="">
+													</td>
+												</tr>
+												<tr>
+													<td>2</td>
+													<td>#14253617</td>
+													<td>Thermistor RKD25GVM</td>
+													<td>
+														<input type="radio" value="toko" name="lokasi_gudang[1]"> Toko
+														<input type="radio" value="gudang" name="lokasi_gudang[1]"> Kantor
+													</td>
+													<td>
+														<input required="" type="text" name="input_serial_number[]" class="form-control m-input" placeholder="">
+													</td>
+												</tr>
+												<tr>
+													<td>3</td>
+													<td>#14253617</td>
+													<td>Thermistor RKD25GVM</td>
+													<td>
+														<input type="radio" value="toko" name="lokasi_gudang[2]"> Toko
+														<input type="radio" value="gudang" name="lokasi_gudang[2]"> Kantor
+													</td>
+													<td>
+														<input required="" type="text" name="input_serial_number[]" class="form-control m-input" placeholder="">
+													</td>
+												</tr>
+												<tr>
+													<td>4</td>
+													<td>#14253617</td>
+													<td>Thermistor RKD25GVM</td>
+													<td>
+														<input type="radio" value="toko" name="lokasi_gudang[3]"> Toko
+														<input  checked="" type="radio" value="gudang" name="lokasi_gudang[3]"> Kantor
+													</td>
+													<td>
+														<input required="" type="text" name="input_serial_number[]" class="form-control m-input" value="23942-34-98923">
+													</td>
+												</tr>
+												<tr>
+													<td>5</td>
+													<td>#14253617</td>
+													<td>Thermistor RKD25GVM</td>
+													<td>
+														<input type="radio" value="toko" name="lokasi_gudang[4]"> Toko
+														<input checked="" type="radio" value="gudang" name="lokasi_gudang[4]"> Kantor
+													</td>
+													<td>
+														<input required="" type="text" name="input_serial_number[]" class="form-control m-input" value="23942-34-98923">
+													</td>
+												</tr>
+											</tbody>
+										</table>
+										<div align="center">
+											<button type="submit" id="btn_simpan" class="btn btn-success">Simpan</button>	
+										</div>
 									</div>
 								</div>
 							</div>
@@ -374,43 +375,42 @@
 				</div>
 			</div>
 		</div>
-	</div>
-	<!-- end:: Body -->
-	<!-- begin::Footer -->
-	<footer class="m-grid__item		m-footer ">
-		<div class="m-container m-container--fluid m-container--full-height m-page__container">
-			<div class="m-stack m-stack--flex-tablet-and-mobile m-stack--ver m-stack--desktop">
-				<div class="m-stack__item m-stack__item--left m-stack__item--middle m-stack__item--last">
-					<span class="m-footer__copyright">
-						Upa'na Studio
-					</span>
+		<!-- end:: Body -->
+		<!-- begin::Footer -->
+		<footer class="m-grid__item		m-footer ">
+			<div class="m-container m-container--fluid m-container--full-height m-page__container">
+				<div class="m-stack m-stack--flex-tablet-and-mobile m-stack--ver m-stack--desktop">
+					<div class="m-stack__item m-stack__item--left m-stack__item--middle m-stack__item--last">
+						<span class="m-footer__copyright">
+							Upa'na Studio
+						</span>
+					</div>
+
 				</div>
-
 			</div>
-		</div>
-	</footer>
-	<!-- end::Footer -->
-</div>
-<!-- end:: Page -->		    
-<!-- begin::Scroll Top -->
-<div class="m-scroll-top m-scroll-top--skin-top" data-toggle="m-scroll-top" data-scroll-offset="500"data-scroll-speed="300">
-	<i class="la la-arrow-up"></i>
-</div>
-<!-- end::Scroll Top -->		    
+		</footer>
+		<!-- end::Footer -->
+	</div>
+	<!-- end:: Page -->		    
+	<!-- begin::Scroll Top -->
+	<div class="m-scroll-top m-scroll-top--skin-top" data-toggle="m-scroll-top" data-scroll-offset="500"data-scroll-speed="300">
+		<i class="la la-arrow-up"></i>
+	</div>
+	<!-- end::Scroll Top -->		    
 
-<!--begin::Base Scripts -->
-<script src="../assets/vendors/base/vendors.bundle.js" type="text/javascript"></script>
-<script src="../assets/demo/default/base/scripts.bundle.js" type="text/javascript"></script>
-<!--end::Base Scripts -->   
-<!--begin::Page Vendors -->
-<script src="../assets/vendors/custom/fullcalendar/fullcalendar.bundle.js" type="text/javascript"></script>
-<!--end::Page Vendors -->  
-<!--begin::Page Snippets -->
-<script src="../assets/app/js/dashboard.js" type="text/javascript"></script>
-<script type="text/javascript">
-	var tbl_proses_barang_masuk = $('#tbl_proses_barang_masuk').mDatatable({
-		data: {
-			saveState: {cookie: false},
+	<!--begin::Base Scripts -->
+	<script src="../assets/vendors/base/vendors.bundle.js" type="text/javascript"></script>
+	<script src="../assets/demo/default/base/scripts.bundle.js" type="text/javascript"></script>
+	<!--end::Base Scripts -->   
+	<!--begin::Page Vendors -->
+	<script src="../assets/vendors/custom/fullcalendar/fullcalendar.bundle.js" type="text/javascript"></script>
+	<!--end::Page Vendors -->  
+	<!--begin::Page Snippets -->
+	<script src="../assets/app/js/dashboard.js" type="text/javascript"></script>
+	<script type="text/javascript">
+		var tbl_proses_barang_masuk = $('#tbl_proses_barang_masuk').mDatatable({
+			data: {
+				saveState: {cookie: false},
 						/*type: 'remote',
 				        source: {
 				          read: {
