--- a/admin gudang/rincian_stock_toko.html
+++ b/admin gudang/rincian_stock_toko.html
@@ -16,7 +16,7 @@
 <head>
 	<meta charset="utf-8" />
 	<title>
-		Admin Gudang | Batal - Pengeluaran Material
+		Admin Gudang | Rinican Stock toko
 	</title>
 	<meta name="description" content="Latest updates and statistic charts">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -171,7 +171,7 @@
 							</a>
 						</li>
 						<!-- Pengeluaran Material -->
-						<li class="m-menu__item m-menu__item--active" aria-haspopup="true" >
+						<li class="m-menu__item" aria-haspopup="true" >
 							<a  href="pengeluaran_material.html" class="m-menu__link ">
 								<i class="m-menu__link-icon la 	la-stack-overflow"></i>
 								<span class="m-menu__link-title">
@@ -197,7 +197,7 @@
 							</a>
 						</li>
 						<!-- Stock -->
-						<li class="m-menu__item" aria-haspopup="true" >
+						<li class="m-menu__item m-menu__item--active" aria-haspopup="true" >
 							<a  href="stock.html" class="m-menu__link ">
 								<i class="m-menu__link-icon flaticon-list-1"></i>
 								<span class="m-menu__link-title">
@@ -233,7 +233,7 @@
 					<div class="d-flex align-items-center">
 						<div class="mr-auto">
 							<h3 class="m-subheader__title m-subheader__title--separator">
-								Pengeluaran Material Batal
+								Stock
 							</h3>
 							<ul class="m-subheader__breadcrumbs m-nav m-nav--inline">
 								<li class="m-nav__item m-nav__item--home">
@@ -245,9 +245,9 @@
 									-
 								</li>
 								<li class="m-nav__item">
-									<a href="pengeluaran_material.html" class="m-nav__link">
+									<a href="stock.html" class="m-nav__link">
 										<span class="m-nav__link-text">
-											Pengeluaran Material
+											Stock
 										</span>
 									</a>
 								</li>
@@ -255,9 +255,9 @@
 									-
 								</li>
 								<li class="m-nav__item">
-									<a href="batal_pengeluaran_material.html" class="m-nav__link">
+									<a href="rincian_stock_toko.html" class="m-nav__link">
 										<span class="m-nav__link-text">
-											Batal
+											Rincian
 										</span>
 									</a>
 								</li>
@@ -269,25 +269,95 @@
 				<div class="m-content">
 					<div class="row">
 						<div class="col-xl-12">
-							<div class="m-portlet m-portlet--tab">
-								<div class="m-portlet__head header">
-									<h3 class="header-pesanan">
-									</h3><br>
-									<h3 name="no_surat_jalan" class="header-pesanan-no"> 
-										<i class="fa fa-check-circle"> </i> 0037/SSM/SPK-PSG/MKS/III/2019
-									</h3><br><br>
-									<div class="info row">
-										<div class="col-sm">
-											<p id="tanggal_surat"><i class="flaticon-calendar-2"> </i>20/11/19</p> 
-											<p id="nama_pelanggan"><i class="flaticon-users"> </i> Ahmad Rifaldi</p>
-											<p id="no_telpon"><i class="fa fa-phone"> </i> 085-145-322-137</p>
+							<div class="m-portlet">
+								<div class="m-portlet__head">
+									<div class="m-portlet__head-caption">
+										<div class="m-portlet__head-title">
+											<h3 class="m-portlet__head-text">
+												Kartu Stock Barang
+											</h3>
 										</div>
-										<div class="col-sm">
-											<p id="email_pelanggan"><i class="fa fa-envelope-o "> </i> aldi4rifaldi@gmail.com</p> 
-											<p id="alamat_pelanggan"><i class="flaticon-placeholder-1"> </i> Jl. Poros Malino, Griya Riski Abadi blok C6</p>
-											<p id="keterangan_pesanan"><i class="fa fa-suitcase"> </i> Pemasangan 2 unit Ac Split Daikin 2 PK Malaysia</p>		
+									</div>
+								</div>
+								<div class="m-portlet__body jenis_barang">
+									<div class="form-group m-form__group row">
+										<label  class="col-2 col-form-label">
+											Jenis Barang
+										</label>
+										<div class="col-10">
+											<input disabled="" class="form-control m-input" type="text" value="AC Split Daikin 2 PK Standar" id="jenis_barang">
 										</div>
-									</div>	
+									</div>
+									<div class="form-group m-form__group row">
+										<label  class="col-2 col-form-label">
+											Satuan
+										</label>
+										<div class="col-10">
+											<input disabled="" class="form-control m-input" type="text" value="" id="satuan_barang">
+										</div>
+									</div>
+									<div class="form-group m-form__group row">
+										<label  class="col-2 col-form-label">
+											Kartu No. 
+										</label>
+										<div class="col-10">
+											<input disabled="" class="form-control m-input" type="text" value="" id="no_kartu">
+										</div>
+									</div>
+									<table class="table" id="tbl_rincian_stock">
+										<thead>
+											<tr>
+												<th>Tanggal</th>
+												<th>Bon No</th>
+												<th>Keterangan</th>
+												<th>Masuk</th>
+												<th>Keluar</th>
+												<th>Sisa</th>
+											</tr>
+										</thead>
+										<tbody>
+											<tr>
+												<td>08/12/2012</td>
+												<td>-</td>
+												<td>PT. Mss Jakarta</td>
+												<td>100 unit</td>
+												<td>-</td>
+												<td>100 unit</td>
+											</tr>
+											<tr>
+												<td>31/01/2013</td>
+												<td>-</td>
+												<td>MU Buriko (Siwa)</td>
+												<td>-</td>
+												<td>10 Unit</td>
+												<td>90 unit</td>
+											</tr>
+											<tr>
+												<td>31/01/2013</td>
+												<td>-</td>
+												<td>MU Mangga Amrullah</td>
+												<td>-</td>
+												<td>9 Unit</td>
+												<td>81 unit</td>
+											</tr>
+											<tr>
+												<td>31/01/2013</td>
+												<td>-</td>
+												<td>MU Dr Ratulangi, Kota Palopo</td>
+												<td>-</td>
+												<td>10 Unit</td>
+												<td>71 unit</td>
+											</tr>
+											<tr>
+												<td>05/02/2013</td>
+												<td>-</td>
+												<td>MU Rappocini Raya</td>
+												<td>-</td>
+												<td>4 Unit</td>
+												<td>67 unit</td>
+											</tr>
+										</tbody>
+									</table>
 								</div>
 							</div>
 						</div>
@@ -305,6 +375,7 @@
 							Upa'na Studio
 						</span>
 					</div>
+
 				</div>
 			</div>
 		</footer>
@@ -327,7 +398,7 @@
 	<!--begin::Page Snippets -->
 	<script src="../assets/app/js/dashboard.js" type="text/javascript"></script>
 	<script type="text/javascript">
-		var tbl_material = $('#tbl_material').mDatatable({
+		var tbl_rincian_stock = $('#tbl_rincian_stock').mDatatable({
 			data: {
 				saveState: {cookie: false},
 					/*type: 'remote',
@@ -370,89 +441,40 @@
 				{
 					field: 'No',
 					textAlign: 'center',
+					width: 50
 				},
 				{
-					field: 'Nama Material',
+					field: 'Tanggal',
 					textAlign: 'center',
-					width:300
+					type:'date',
+					format: 'DD/MM/YYYY',
 				},
 				{
-					field: 'Teknisi',
-					textAlign: 'center',
-					width: 75
-				},
-				{
-					field: 'Kostumer',
-					textAlign: 'center',
-					width: 75
-				},
-				{
-					field: 'Pengeluaran',
+					field: 'Bon No',
 					textAlign: 'center',
 				},
 				{
-					field: 'Retur',
+					field: 'Keterangan',
 					textAlign: 'center',
 				},
 				{
-					field: 'Total',
+					field: 'Masuk',
 					textAlign: 'center',
 				},
 				{
-					field: 'Aksi',
+					field: 'Keluar',
 					textAlign: 'center',
-					width: 200
+				},
+				{
+					field: 'Sisa',
+					textAlign: 'center',
 				}
 
 				],
 			});
 		</script>
-		<script>
-			$('.btn_hapus').click(function(e) {
-				swal({
-					title: 'Apakah anda yakin menghapus material ini?',
-					type: 'warning',
-					showCancelButton: true,
-					confirmButtonText: 'Ya,Hapus!'
-				}).then(function(result) {
-					if (result.value) {
-						swal(
-							'Berhasil!',
-							'Material telah dihapus',
-							'success'
-							)
-					}
-				});
-			});
-		</script>
-		<script>
-			//== Class definition
-			var SweetAlert2Demo = function() {
-
-			//== Demos
-			var initDemos = function() {
-
-				$('#btn_simpan').click(function(e) {
-					swal("Data Telah Tersimpan!", "data yang anda inputkan telah tersimpan", "success");
-				});
-			};
-
-			return {
-					//== Init
-					init: function() {
-						initDemos();
-					},
-				};
-			}();
-
-			//== Class Initialization
-			jQuery(document).ready(function() {
-				SweetAlert2Demo.init();
-			});
-		</script>
-
 		<!--end::Page Snippets -->
 		<script src="http://localhost:35729/livereload.js"></script>
-		
 	</body>
-<!-- end::Body -->
+	<!-- end::Body -->
+	</html>
