--- a/admin gudang/rincian_surat_jalan.html
+++ b/admin gudang/rincian_surat_jalan.html
@@ -137,7 +137,7 @@
 					<!-- ASIDE MENU DISINI -->
 					<ul class="m-menu__nav  m-menu__nav--dropdown-submenu-arrow ">
 						<!-- DASHBOARD -->
-						<li class="m-menu__item " aria-haspopup="true" >
+						<li class="m-menu__item  " aria-haspopup="true" >
 							<a  href="index.html" class="m-menu__link ">
 								<i class="m-menu__link-icon flaticon-line-graph"></i>
 								<span class="m-menu__link-title">
@@ -188,6 +188,19 @@
 								</span>
 							</a>
 						</li>
+						<!-- Inventory-->
+						<li class="m-menu__item" aria-haspopup="true" >
+							<a  href="inventory.html" class="m-menu__link ">
+								<i class="m-menu__link-icon fa 	fa-cube"></i>
+								<span class="m-menu__link-title">
+									<span class="m-menu__link-wrap">
+										<span class="m-menu__link-text">
+											Inventory
+										</span>
+									</span>
+								</span>
+							</a>
+						</li>
 						<!-- Stock -->
 						<li class="m-menu__item" aria-haspopup="true" >
 							<a  href="stock.html" class="m-menu__link ">
@@ -195,7 +208,7 @@
 								<span class="m-menu__link-title">
 									<span class="m-menu__link-wrap">
 										<span class="m-menu__link-text">
-											Stock
+											Manajemen Stock
 										</span>
 									</span>
 								</span>
@@ -213,7 +226,7 @@
 									</span>
 								</span>
 							</a>
-						</li>
+						</li>	
 					</ul>
 				</div>
 				<!-- END: Aside Menu -->
@@ -255,110 +268,98 @@
 								</li>
 							</ul>
 						</div>
-						<div>
-							<span class="m-subheader__daterange" id="m_dashboard_daterangepicker">
-								<span class="m-subheader__daterange-label">
-									<span class="m-subheader__daterange-title"></span>
-									<span class="m-subheader__daterange-date m--font-brand"></span>
-								</span>
-								<a
-								href="#"
-								class="btn btn-sm btn-brand m-btn m-btn--icon m-btn--icon-only m-btn--custom m-btn--pill">
-								<i class="la la-angle-down"></i>
-							</a>
-						</span>
 					</div>
 				</div>
-			</div>
-			<!-- END: Subheader -->
-			<div class="m-content">
-				<div class="row">
-					<div class="col-xl-12">
-						<div class="m-portlet m-portlet--mobile">
-							<div class="m-portlet__head header">
-								<h3 class="header-pesanan">
-								</h3><br>
-								<h3 name="no_surat_jalan" class="header-pesanan-no"> 
-									<i class="fa fa-check-circle"> </i> 0037/SSM/SPK-PSG/MKS/III/2019
-								</h3><br><br>
-								<div class="info row">
-									<div class="col-sm">
-										<p id="tanggal_surat">
-											<i class="flaticon-calendar-2"> </i>20/11/19
-										</p> 
-										<p id="nama_pelanggan">
-											<i class="flaticon-users"> </i> Ahmad Rifaldi
-										</p>
-										<p id="no_telpon">
-											<i class="fa fa-phone"> </i> 085-145-322-137
-										</p>
-										
-									</div>
-									<div class="col-sm">
-										<p id="email_pelanggan"><i class="fa fa-envelope-o "> </i> aldi4rifaldi@gmail.com</p> 
-										<p id="alamat_pelanggan"><i class="flaticon-placeholder-1"> </i> Jl. Poros Malino, Griya Riski Abadi blok C6,Gowa</p>
-										<p>Pasang : <span id="status_spk">Ya</span></p>
-									</div>
-								</div>	
-							</div>
-							<div class="m-portlet__body">
-								<!--end: Search Form -->
-								<!--begin: Datatable -->
-								<!-- <div class="m_datatable" id="local_data"></div> -->
-								<p>Kami kirimkan barang-barang tersebut dibawah ini dengan kendaraan <span id="merek_kendaraan">Toyota</span> No. <span id="dd_kendaraan">DD 1234 BC</span></p>
-								<table class="table" id="tbl_rincian_surat_jalan">
-									<thead>
-										<tr>
-											<th>Banyaknya</th>
-											<th>Nama Barang</th>
-										</tr>
-									</thead>
-									<tbody>
-										<tr>
-											<td>1 unit</td>
-											<td>AC Split 1/2 PK Daikin R32 Non Inverter Thailand</td>
-										</tr>
-										<tr>
-											<td>3 meter</td>
-											<td>Pipa</td>
-										</tr>
-										<tr>
-											<td>4 meter</td>
-											<td>Kable</td>
-										</tr>
-										<tr>
-											<td>3 meter</td>
-											<td>Drain Air</td>
-										</tr>
-										<tr>
-											<td>1 Set</td>
-											<td>Bracket</td>
-										</tr>
-										<tr>
-											<td>-</td>
-											<td>Remote</td>
-										</tr>
-										<tr>
-											<td>-</td>
-											<td>Kartu Garansi</td>
-										</tr>
-									</tbody>
-								</table>
-								<!--end: Datatable -->
-								<div class="row">
-									<div align="center" class="col-sm">
-										<p>Tanda Terima</p>
-										<br>
-										<br>
-										<br>
-										<br>
-									</div>
-									<div align="center" class="col-sm">
-										<p>Hormat Kami</p>
-										<br>
-										<br>
-										<br>
-										<br>
+				<!-- END: Subheader -->
+				<div class="m-content">
+					<div class="row">
+						<div class="col-xl-12">
+							<div class="m-portlet m-portlet--mobile">
+								<div class="m-portlet__head header">
+									<h3 class="header-pesanan">
+									</h3><br>
+									<h3 name="no_surat_jalan" class="header-pesanan-no"> 
+										<i class="fa fa-check-circle"> </i> 0037/SSM/SPK-PSG/MKS/III/2019
+									</h3><br><br>
+									<div class="info row">
+										<div class="col-sm">
+											<p id="tanggal_surat">
+												<i class="flaticon-calendar-2"> </i>20/11/19
+											</p> 
+											<p id="nama_pelanggan">
+												<i class="flaticon-users"> </i> Ahmad Rifaldi
+											</p>
+											<p id="no_telpon">
+												<i class="fa fa-phone"> </i> 085-145-322-137
+											</p>
+
+										</div>
+										<div class="col-sm">
+											<p id="email_pelanggan"><i class="fa fa-envelope-o "> </i> aldi4rifaldi@gmail.com</p> 
+											<p id="alamat_pelanggan"><i class="flaticon-placeholder-1"> </i> Jl. Poros Malino, Griya Riski Abadi blok C6,Gowa</p>
+											<p>Pasang : <span id="status_spk">Ya</span></p>
+										</div>
+									</div>	
+								</div>
+								<div class="m-portlet__body">
+									<!--end: Search Form -->
+									<!--begin: Datatable -->
+									<!-- <div class="m_datatable" id="local_data"></div> -->
+									<p>Kami kirimkan barang-barang tersebut dibawah ini dengan kendaraan <span id="merek_kendaraan">Toyota</span> No. <span id="dd_kendaraan">DD 1234 BC</span></p>
+									<table class="table" id="tbl_rincian_surat_jalan">
+										<thead>
+											<tr>
+												<th>Banyaknya</th>
+												<th>Nama Barang</th>
+											</tr>
+										</thead>
+										<tbody>
+											<tr>
+												<td>1 unit</td>
+												<td>AC Split 1/2 PK Daikin R32 Non Inverter Thailand</td>
+											</tr>
+											<tr>
+												<td>3 meter</td>
+												<td>Pipa</td>
+											</tr>
+											<tr>
+												<td>4 meter</td>
+												<td>Kable</td>
+											</tr>
+											<tr>
+												<td>3 meter</td>
+												<td>Drain Air</td>
+											</tr>
+											<tr>
+												<td>1 Set</td>
+												<td>Bracket</td>
+											</tr>
+											<tr>
+												<td>-</td>
+												<td>Remote</td>
+											</tr>
+											<tr>
+												<td>-</td>
+												<td>Kartu Garansi</td>
+											</tr>
+										</tbody>
+									</table>
+									<!--end: Datatable -->
+									<div class="row">
+										<div align="center" class="col-sm">
+											<p>Tanda Terima</p>
+											<br>
+											<br>
+											<br>
+											<br>
+										</div>
+										<div align="center" class="col-sm">
+											<p>Hormat Kami</p>
+											<br>
+											<br>
+											<br>
+											<br>
+										</div>
 									</div>
 								</div>
 							</div>
@@ -367,46 +368,45 @@
 				</div>
 			</div>
 		</div>
-	</div>
-	<!-- end:: Body -->
-	<!-- begin::Footer -->
-	<footer class="m-grid__item		m-footer ">
-		<div class="m-container m-container--fluid m-container--full-height m-page__container">
-			<div class="m-stack m-stack--flex-tablet-and-mobile m-stack--ver m-stack--desktop">
-				<div class="m-stack__item m-stack__item--left m-stack__item--middle m-stack__item--last">
-					<span class="m-footer__copyright">
-						Upa'na Studio
-					</span>
+		<!-- end:: Body -->
+		<!-- begin::Footer -->
+		<footer class="m-grid__item		m-footer ">
+			<div class="m-container m-container--fluid m-container--full-height m-page__container">
+				<div class="m-stack m-stack--flex-tablet-and-mobile m-stack--ver m-stack--desktop">
+					<div class="m-stack__item m-stack__item--left m-stack__item--middle m-stack__item--last">
+						<span class="m-footer__copyright">
+							Upa'na Studio
+						</span>
+					</div>
+
 				</div>
-
 			</div>
-		</div>
-	</footer>
-	<!-- end::Footer -->
-</div>
-<!-- end:: Page -->		    
-<!-- begin::Scroll Top -->
-<div class="m-scroll-top m-scroll-top--skin-top" data-toggle="m-scroll-top" data-scroll-offset="500"data-scroll-speed="300">
-	<i class="la la-arrow-up"></i>
-</div>
-<!-- end::Scroll Top -->		    
+		</footer>
+		<!-- end::Footer -->
+	</div>
+	<!-- end:: Page -->		    
+	<!-- begin::Scroll Top -->
+	<div class="m-scroll-top m-scroll-top--skin-top" data-toggle="m-scroll-top" data-scroll-offset="500"data-scroll-speed="300">
+		<i class="la la-arrow-up"></i>
+	</div>
+	<!-- end::Scroll Top -->		    
 
-<!--begin::Base Scripts -->
-<script src="../assets/vendors/base/vendors.bundle.js" type="text/javascript"></script>
-<script src="../assets/demo/default/base/scripts.bundle.js" type="text/javascript"></script>
-<!--end::Base Scripts -->   
-<!--begin::Page Vendors -->
-<script src="../assets/vendors/custom/fullcalendar/fullcalendar.bundle.js" type="text/javascript"></script>
-<!--end::Page Vendors -->  
-<!--begin::Page Snippets -->
-<script src="../assets/app/js/dashboard.js" type="text/javascript"></script>
+	<!--begin::Base Scripts -->
+	<script src="../assets/vendors/base/vendors.bundle.js" type="text/javascript"></script>
+	<script src="../assets/demo/default/base/scripts.bundle.js" type="text/javascript"></script>
+	<!--end::Base Scripts -->   
+	<!--begin::Page Vendors -->
+	<script src="../assets/vendors/custom/fullcalendar/fullcalendar.bundle.js" type="text/javascript"></script>
+	<!--end::Page Vendors -->  
+	<!--begin::Page Snippets -->
+	<script src="../assets/app/js/dashboard.js" type="text/javascript"></script>
 
-<!--end::Page Snippets -->
-<script src="http://localhost:35729/livereload.js"></script>
-<script type="text/javascript">
-	var tbl_rincian_surat_jalan = $('#tbl_rincian_surat_jalan').mDatatable({
-		data: {
-			saveState: {cookie: false},
+	<!--end::Page Snippets -->
+	<script src="http://localhost:35729/livereload.js"></script>
+	<script type="text/javascript">
+		var tbl_rincian_surat_jalan = $('#tbl_rincian_surat_jalan').mDatatable({
+			data: {
+				saveState: {cookie: false},
 					/*type: 'remote',
 			        source: {
 			          read: {
