--- a/admin gudang/surat_jalan.html
+++ b/admin gudang/surat_jalan.html
@@ -132,7 +132,7 @@
 					<!-- ASIDE MENU DISINI -->
 					<ul class="m-menu__nav  m-menu__nav--dropdown-submenu-arrow ">
 						<!-- DASHBOARD -->
-						<li class="m-menu__item " aria-haspopup="true" >
+						<li class="m-menu__item  " aria-haspopup="true" >
 							<a  href="index.html" class="m-menu__link ">
 								<i class="m-menu__link-icon flaticon-line-graph"></i>
 								<span class="m-menu__link-title">
@@ -183,6 +183,19 @@
 								</span>
 							</a>
 						</li>
+						<!-- Inventory-->
+						<li class="m-menu__item" aria-haspopup="true" >
+							<a  href="inventory.html" class="m-menu__link ">
+								<i class="m-menu__link-icon fa 	fa-cube"></i>
+								<span class="m-menu__link-title">
+									<span class="m-menu__link-wrap">
+										<span class="m-menu__link-text">
+											Inventory
+										</span>
+									</span>
+								</span>
+							</a>
+						</li>
 						<!-- Stock -->
 						<li class="m-menu__item" aria-haspopup="true" >
 							<a  href="stock.html" class="m-menu__link ">
@@ -190,7 +203,7 @@
 								<span class="m-menu__link-title">
 									<span class="m-menu__link-wrap">
 										<span class="m-menu__link-text">
-											Stock
+											Manajemen Stock
 										</span>
 									</span>
 								</span>
@@ -208,7 +221,7 @@
 									</span>
 								</span>
 							</a>
-						</li>
+						</li>	
 					</ul>
 				</div>
 				<!-- END: Aside Menu -->
@@ -232,7 +245,7 @@
 									-
 								</li>
 								<li class="m-nav__item">
-									<a href="list_surat_jalan.html" class="m-nav__link">
+									<a href="surat_jalan.html" class="m-nav__link">
 										<span class="m-nav__link-text">
 											Surat Jalan
 										</span>
@@ -240,165 +253,152 @@
 								</li>
 							</ul>
 						</div>
-						<div>
-							<span class="m-subheader__daterange" id="m_dashboard_daterangepicker">
-								<span class="m-subheader__daterange-label">
-									<span class="m-subheader__daterange-title"></span>
-									<span class="m-subheader__daterange-date m--font-brand"></span>
-								</span>
-								<a
-								href="#"
-								class="btn btn-sm btn-brand m-btn m-btn--icon m-btn--icon-only m-btn--custom m-btn--pill">
-								<i class="la la-angle-down"></i>
-							</a>
-						</span>
 					</div>
 				</div>
-			</div>
-			<!-- END: Subheader -->
-			<div class="m-content">
-				<div class="row">
-					<div class="col-xl-12">
-						<div class="m-portlet m-portlet--mobile">
-							<div class="m-portlet__body">
-								<!--begin: Search Form -->
-								<div class="m-form m-form--label-align-right m--margin-top-20 m--margin-bottom-30">
-									<div class="row align-items-center">
-										<div class="col-md-12">
-											<div class="form-group m-form__group row align-items-center">
-												<div class="col-md-4">
-													<div class="m-portlet__head-title">
-														<h3 class="m-portlet__head-text">
-															List Surat Jalan
-														</h3>
-														<button onclick="window.location.href = 'tambah_surat_jalan.html';" type="button" class="btn btn-success btn_tambah_spk">Tambah Surat</button>
+				<!-- END: Subheader -->
+				<div class="m-content">
+					<div class="row">
+						<div class="col-xl-12">
+							<div class="m-portlet m-portlet--mobile">
+								<div class="m-portlet__body">
+									<!--begin: Search Form -->
+									<div class="m-form m-form--label-align-right m--margin-top-20 m--margin-bottom-30">
+										<div class="row align-items-center">
+											<div class="col-md-12">
+												<div class="form-group m-form__group row align-items-center">
+													<div class="col-md-4">
+														<div class="m-portlet__head-title">
+															<h3 class="m-portlet__head-text">
+																List Surat Jalan
+															</h3>
+															<button onclick="window.location.href = 'tambah_surat_jalan.html';" type="button" class="btn btn-success btn_tambah_spk">Tambah Surat</button>
+														</div>
 													</div>
-												</div>
-												<div class="col-md-4 offset-md-4">
-													<div class="m-input-icon m-input-icon--left">
-														<input type="text" class="form-control m-input m-input--solid" placeholder="Search..." id="generalSearch">
-														<span class="m-input-icon__icon m-input-icon__icon--left">
-															<span>
-																<i class="la la-search"></i>
+													<div class="col-md-4 offset-md-4">
+														<div class="m-input-icon m-input-icon--left">
+															<input type="text" class="form-control m-input m-input--solid" placeholder="Search..." id="generalSearch">
+															<span class="m-input-icon__icon m-input-icon__icon--left">
+																<span>
+																	<i class="la la-search"></i>
+																</span>
 															</span>
-														</span>
+														</div>
 													</div>
 												</div>
 											</div>
 										</div>
 									</div>
+									<!--end: Search Form -->
+									<!--begin: Datatable -->
+									<!-- <div class="m_datatable" id="local_data"></div> -->
+									<table class="table" id="tbl_list_surat_jalan">
+										<thead>
+											<tr>
+												<th>No</th>
+												<th>Tanggal</th>
+												<th>No Surat</th>
+												<th>Nama Pelanggan</th>
+												<th>Alamat</th>
+												<th>Aksi</th>
+											</tr>
+										</thead>
+										<tbody>
+											<tr>
+												<td>1</td>
+												<td>20/19/2018</td>
+												<td>#14253617</td>
+												<td>Ibu Aida</td>
+												<td>Jl. Aroepala no. 10, Makassar</td>
+												<td>
+													<a href="rincian_surat_jalan.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
+												</td>
+											</tr>
+											<tr>
+												<td>2</td>
+												<td>20/19/2018</td>
+												<td>#14253617</td>
+												<td>Ibu Aida</td>
+												<td>Jl. Aroepala no. 10, Makassar</td>
+												<td>
+													<a href="rincian_surat_jalan.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
+												</td>
+											</tr>
+											<tr>
+												<td>3</td>
+												<td>20/19/2018</td>
+												<td>#14253617</td>
+												<td>Ibu Aida</td>
+												<td>Jl. Aroepala no. 10, Makassar</td>
+												<td>
+													<a href="rincian_surat_jalan.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
+												</td>
+											</tr>
+											<tr>
+												<td>4</td>
+												<td>20/19/2018</td>
+												<td>#14253617</td>
+												<td>Ibu Aida</td>
+												<td>Jl. Aroepala no. 10, Makassar</td>
+												<td>
+													<a href="rincian_surat_jalan.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
+												</td>
+											</tr>
+											<tr>
+												<td>5</td>
+												<td>20/19/2018</td>
+												<td>#14253617</td>
+												<td>Ibu Aida</td>
+												<td>Jl. Aroepala no. 10, Makassar</td>
+												<td>
+													<a href="rincian_surat_jalan.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
+												</td>
+											</tr>
+										</tbody>
+									</table>
+									<!--end: Datatable -->
 								</div>
-								<!--end: Search Form -->
-								<!--begin: Datatable -->
-								<!-- <div class="m_datatable" id="local_data"></div> -->
-								<table class="table" id="tbl_list_surat_jalan">
-									<thead>
-										<tr>
-											<th>No</th>
-											<th>Tanggal</th>
-											<th>No Surat</th>
-											<th>Nama Pelanggan</th>
-											<th>Alamat</th>
-											<th>Aksi</th>
-										</tr>
-									</thead>
-									<tbody>
-										<tr>
-											<td>1</td>
-											<td>20/19/2018</td>
-											<td>#14253617</td>
-											<td>Ibu Aida</td>
-											<td>Jl. Aroepala no. 10, Makassar</td>
-											<td>
-												<a href="rincian_surat_jalan.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
-											</td>
-										</tr>
-										<tr>
-											<td>2</td>
-											<td>20/19/2018</td>
-											<td>#14253617</td>
-											<td>Ibu Aida</td>
-											<td>Jl. Aroepala no. 10, Makassar</td>
-											<td>
-												<a href="rincian_surat_jalan.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
-											</td>
-										</tr>
-										<tr>
-											<td>3</td>
-											<td>20/19/2018</td>
-											<td>#14253617</td>
-											<td>Ibu Aida</td>
-											<td>Jl. Aroepala no. 10, Makassar</td>
-											<td>
-												<a href="rincian_surat_jalan.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
-											</td>
-										</tr>
-										<tr>
-											<td>4</td>
-											<td>20/19/2018</td>
-											<td>#14253617</td>
-											<td>Ibu Aida</td>
-											<td>Jl. Aroepala no. 10, Makassar</td>
-											<td>
-												<a href="rincian_surat_jalan.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
-											</td>
-										</tr>
-										<tr>
-											<td>5</td>
-											<td>20/19/2018</td>
-											<td>#14253617</td>
-											<td>Ibu Aida</td>
-											<td>Jl. Aroepala no. 10, Makassar</td>
-											<td>
-												<a href="rincian_surat_jalan.html" class="btn btn-sm btn-primary" style="color:white; width:80px;">Rincian</a>
-											</td>
-										</tr>
-									</tbody>
-								</table>
-								<!--end: Datatable -->
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-	</div>
-	<!-- end:: Body -->
-	<!-- begin::Footer -->
-	<footer class="m-grid__item		m-footer ">
-		<div class="m-container m-container--fluid m-container--full-height m-page__container">
-			<div class="m-stack m-stack--flex-tablet-and-mobile m-stack--ver m-stack--desktop">
-				<div class="m-stack__item m-stack__item--left m-stack__item--middle m-stack__item--last">
-					<span class="m-footer__copyright">
-						Upa'na Studio
-					</span>
+		<!-- end:: Body -->
+		<!-- begin::Footer -->
+		<footer class="m-grid__item		m-footer ">
+			<div class="m-container m-container--fluid m-container--full-height m-page__container">
+				<div class="m-stack m-stack--flex-tablet-and-mobile m-stack--ver m-stack--desktop">
+					<div class="m-stack__item m-stack__item--left m-stack__item--middle m-stack__item--last">
+						<span class="m-footer__copyright">
+							Upa'na Studio
+						</span>
+					</div>
+
 				</div>
-
 			</div>
-		</div>
-	</footer>
-	<!-- end::Footer -->
-</div>
-<!-- end:: Page -->		    
-<!-- begin::Scroll Top -->
-<div class="m-scroll-top m-scroll-top--skin-top" data-toggle="m-scroll-top" data-scroll-offset="500"data-scroll-speed="300">
-	<i class="la la-arrow-up"></i>
-</div>
-<!-- end::Scroll Top -->		    
+		</footer>
+		<!-- end::Footer -->
+	</div>
+	<!-- end:: Page -->		    
+	<!-- begin::Scroll Top -->
+	<div class="m-scroll-top m-scroll-top--skin-top" data-toggle="m-scroll-top" data-scroll-offset="500"data-scroll-speed="300">
+		<i class="la la-arrow-up"></i>
+	</div>
+	<!-- end::Scroll Top -->		    
 
-<!--begin::Base Scripts -->
-<script src="../assets/vendors/base/vendors.bundle.js" type="text/javascript"></script>
-<script src="../assets/demo/default/base/scripts.bundle.js" type="text/javascript"></script>
-<!--end::Base Scripts -->   
-<!--begin::Page Vendors -->
-<script src="../assets/vendors/custom/fullcalendar/fullcalendar.bundle.js" type="text/javascript"></script>
-<!--end::Page Vendors -->  
-<!--begin::Page Snippets -->
-<script src="../assets/app/js/dashboard.js" type="text/javascript"></script>
-<script type="text/javascript">
-	var tbl_list_surat_jalan = $('#tbl_list_surat_jalan').mDatatable({
-		data: {
-			saveState: {cookie: false},
+	<!--begin::Base Scripts -->
+	<script src="../assets/vendors/base/vendors.bundle.js" type="text/javascript"></script>
+	<script src="../assets/demo/default/base/scripts.bundle.js" type="text/javascript"></script>
+	<!--end::Base Scripts -->   
+	<!--begin::Page Vendors -->
+	<script src="../assets/vendors/custom/fullcalendar/fullcalendar.bundle.js" type="text/javascript"></script>
+	<!--end::Page Vendors -->  
+	<!--begin::Page Snippets -->
+	<script src="../assets/app/js/dashboard.js" type="text/javascript"></script>
+	<script type="text/javascript">
+		var tbl_list_surat_jalan = $('#tbl_list_surat_jalan').mDatatable({
+			data: {
+				saveState: {cookie: false},
 					/*type: 'remote',
 			        source: {
 			          read: {
